samples/_failures_safe/1761243936_04636e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2f24c23.c: In function ‘main’:
./samples/SAFE/__tmp_f2f24c23.c:186:12: error: missing terminating " character
  186 |     printf("State Machine Demo\n
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f2f24c23.c:186:5: error: expected expression at end of input
  186 |     printf("State Machine Demo\n
      |     ^~~~~~
./samples/SAFE/__tmp_f2f24c23.c:186:5: error: expected declaration or statement at end of input
